--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 		<tr>
 			<td id="content">
 				<img src="foto/content.jpeg">
-				<p> Neya Savitri 
+				<p> <b> Neya Savitri </b>
+					
 					I Said that sentence even though I completely know, we can't ever go back to being "just friend" with someone that we've grown attached to and come to love. Once that bond is there with a person, we won't ever be able to see thyem the same as before. Those feelings will always be there.
 				</p>
 			<audio autoplay controls>
