--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 		<tr>
 			<td id="content">
 				<img src="foto/content.jpeg">
-				<p> <b> Neya Savitri </b>
-					
-					I Said that sentence even though I completely know, we can't ever go back to being "just friend" with someone that we've grown attached to and come to love. Once that bond is there with a person, we won't ever be able to see thyem the same as before. Those feelings will always be there.
+				<p> <b> Neya Savitri </b> </p>	
+				<p>I Said that sentence even though I completely know, we can't ever go back to being "just friend" with someone that we've grown attached to and come to love. Once that bond is there with a person, we won't ever be able to see thyem the same as before. Those feelings will always be there.
 				</p>
 			<audio autoplay controls>
 				<source src="lagu/nadin.mp3" type="audio/mpeg">
