--- a/foto.html
+++ b/foto.html
@@ -97,7 +97,7 @@
 		</tr>
 		<tr>
 			<td id="content">
-				<img class="foto1"src="foto/image1.jpg">
+				<img class="foto1"src="foto/unud.png">
 				<img class="foto1"src="foto/image2.jpg">
 				<img class="foto1"src="foto/image3.jpg">
 				<img class="foto2"src="foto/image4.jpg">
